# mfrclib4arm

./: ProjectHome.md
PandaRFID/Panda_RFID/: Panda_RFID.sln
PandaRFID/Panda_RFID/Panda_RFID/: Panda_RFID.csproj  Program.cs
PandaRFID/Panda_RFID/Panda_RFID/Properties/: AssemblyInfo.cs
RaspSPI/: .project  CMakeLists.txt  Readme.txt  gpio.h  main.c  spi.c  spi.h
RaspSPI/Debug/: gpio.d  main.d  makefile  sources.mk  spi.d  subdir.mk
RaspSPI/Debug/Rfid/: MF522.d
RaspSPI/Driver/: MF522.h
XmegaRFID/: FreeRTOSConfig.h  clksys_driver.c  main.c  port.c
trunk/PandaRFID/Panda_RFID/Panda_RFID/: Panda_RFID.csproj  Program.cs  Resources.Designer.cs
trunk/RaspSPI/: .cproject  gpio.c  gpio.h  main.c  spi.c
trunk/RaspSPI/Debug/: RaspSPI
trunk/RaspSPI/Debug/Rfid/: subdir.mk
trunk/RaspSPI/Driver/: MF522.c
trunk/XmegaRFID/: clksys_driver.h  leds.c  leds.h  spi_com.c  spi_com.h  spi_driver.c
